Cleaned up logging in training loop

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -1728,24 +1728,7 @@
         "valid_inc = 20\n",
         "save_inc = 1000\n",
         "\n",
-        "prev_grad_norm = np.float('inf')\n",
-        "\n",
-        "train_loss_result = []\n",
-        "train_act_with_enc_loss_result = []\n",
-        "train_act_with_plan_loss_result = []\n",
-        "train_reg_loss_result = []\n",
-        "valid_loss_result = []\n",
-        "valid_act_with_enc_loss_result = []\n",
-        "valid_act_with_plan_loss_result = []\n",
-        "valid_reg_loss_result = []\n",
-        "valid_position_loss_result = []\n",
-        "valid_max_position_loss_result = []\n",
-        "valid_rotation_loss_result = []\n",
-        "valid_max_rotation_loss_result = []\n",
-        "valid_gripper_loss_result = []\n",
-        "beta_result = []\n",
-        "latent_img_result = []\n",
-        "\n"
+        "prev_grad_norm = np.float('inf')"
       ],
       "execution_count": 33,
       "outputs": []
@@ -2016,20 +1999,24 @@
       },
       "source": [
         "from lfp.plotting import produce_cluster_fig, project_enc_and_plan, plot_to_image\n",
-        "v_it = iter(valid_dataset) #for the cluster fig, easier with a non distributed dataset"
+        "v_it = iter(valid_dataset) #for the cluster fig, easier with a non distributed dataset\n",
+        "\n",
+        "def log(metric):\n",
+        "  result = metric.result()\n",
+        "  metric.reset_states()\n",
+        "  return result"
       ],
-      "execution_count": 39,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 448
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IXF0Y8aKrsng",
-        "outputId": "c367329c-bd85-46bd-9452-29322352ecc1"
+        "outputId": "cb2a84fd-f006-4218-c53e-1f2d843444dd"
       },
       "source": [
         "while t < TRAIN_STEPS:\n",
@@ -2048,90 +2035,38 @@
         "        # validation plotting\n",
         "        progbar.add(valid_inc, [('Train Loss', train_loss.result()), ('Validation Loss', valid_loss.result()), ('Time (s)', round(time.time() - start_time, 1))])\n",
         "\n",
-        "        train_loss_result.append(train_loss.result())\n",
-        "        valid_loss_result.append(valid_loss.result())\n",
-        "        valid_position_loss_result.append(valid_position_loss.result())\n",
-        "        valid_max_position_loss_result.append(valid_max_position_loss.result())\n",
-        "        valid_rotation_loss_result.append(valid_rotation_loss.result())\n",
-        "        valid_max_rotation_loss_result.append(valid_max_rotation_loss.result())\n",
-        "        valid_gripper_loss_result.append(valid_gripper_loss.result())\n",
         "\n",
-        "        if GCBC:\n",
-        "          wandb.log({'train_loss_result':train_loss_result[-1],\n",
-        "                      'valid_loss_result':valid_loss_result[-1],\n",
-        "                      'valid_position_loss_result':valid_position_loss_result[-1],\n",
-        "                      'valid_max_position_loss_result':valid_max_position_loss_result[-1],\n",
-        "                      'valid_rotation_loss_result':valid_rotation_loss_result[-1],\n",
-        "                      'valid_max_rotation_loss_result':valid_max_rotation_loss_result[-1],\n",
-        "                      'valid_gripper_loss_result':valid_gripper_loss_result[-1],\n",
-        "                      'grad_norm': grad_norm.result()\n",
-        "                    },\n",
-        "                    step=t)\n",
-        "        else:\n",
-        "                    # Latent space projection\n",
+        "        wandb.log({'train_loss_result':log(train_loss),\n",
+        "                    'valid_loss_result':log(valid_loss),\n",
+        "                    'valid_position_loss_result':log(valid_position_loss),\n",
+        "                    'valid_max_position_loss_result':log(valid_max_position_loss),\n",
+        "                    'valid_rotation_loss_result':log(valid_rotation_loss),\n",
+        "                    'valid_max_rotation_loss_result':log(valid_max_rotation_loss),\n",
+        "                    'valid_gripper_loss_result':log(valid_gripper_loss),\n",
+        "                    'actor_grad_norm': log(actor_grad_norm),\n",
+        "                    'actor_grad_norm_clipped': log(actor_grad_norm_clipped),\n",
+        "                  },\n",
+        "                  step=t)\n",
         "          \n",
-        "          train_act_with_enc_loss_result.append(train_act_with_enc_loss.result())\n",
-        "          train_act_with_plan_loss_result.append(train_act_with_plan_loss.result())\n",
-        "          train_reg_loss_result.append(train_reg_loss.result())\n",
-        "          valid_act_with_enc_loss_result.append(valid_act_with_enc_loss.result())\n",
-        "          valid_act_with_plan_loss_result.append(valid_act_with_plan_loss.result())\n",
-        "          valid_reg_loss_result.append(valid_reg_loss.result())\n",
-        "          beta_result.append(beta)\n",
-        "\n",
-        "          wandb.log({'train_loss_result':train_loss_result[-1],\n",
-        "                      'train_act_with_enc_loss_result':train_act_with_enc_loss_result[-1],\n",
-        "                      'train_act_with_plan_loss_result':train_act_with_plan_loss_result[-1],\n",
-        "                      'train_reg_loss_result':train_reg_loss_result[-1],\n",
-        "                      'valid_loss_result':valid_loss_result[-1],\n",
-        "                      'valid_act_with_enc_loss_result':valid_act_with_enc_loss_result[-1],\n",
-        "                      'valid_act_with_plan_loss_result':valid_act_with_plan_loss_result[-1],\n",
-        "                      'valid_reg_loss_result':valid_reg_loss_result[-1],\n",
-        "                      'valid_position_loss_result':valid_position_loss_result[-1],\n",
-        "                      'valid_max_position_loss_result':valid_max_position_loss_result[-1],\n",
-        "                      'valid_rotation_loss_result':valid_rotation_loss_result[-1],\n",
-        "                      'valid_max_rotation_loss_result':valid_max_rotation_loss_result[-1],\n",
-        "                      'valid_gripper_loss_result':valid_gripper_loss_result[-1],\n",
-        "                      'beta_result':beta_result[-1],\n",
-        "                      'actor_grad_norm': actor_grad_norm.result(),\n",
-        "                     'encoder_grad_norm': encoder_grad_norm.result(),\n",
-        "                     'planner_grad_norm': planner_grad_norm.result(),\n",
-        "                     'actor_grad_norm_clipped': actor_grad_norm_clipped.result(),\n",
-        "                     'encoder_grad_norm_clipped': encoder_grad_norm_clipped.result(),\n",
-        "                     'planner_grad_norm_clipped': planner_grad_norm_clipped.result(),\n",
+        "        if not GCBC:\n",
+        "          wandb.log({\n",
+        "                      'train_act_with_enc_loss_result':log(train_act_with_enc_loss),\n",
+        "                      'train_act_with_plan_loss_result':log(train_act_with_plan_loss),\n",
+        "                      'train_reg_loss_result':log(train_reg_loss),\n",
+        "                      'valid_act_with_enc_loss_result':log(valid_act_with_enc_loss),\n",
+        "                      'valid_act_with_plan_loss_result':valid_act_with_plan_loss.result(),\n",
+        "                      'valid_reg_loss_result':log(valid_reg_loss),\n",
+        "                      'beta_result':beta,\n",
+        "                      'encoder_grad_norm': log(encoder_grad_norm),\n",
+        "                      'planner_grad_norm': log(planner_grad_norm),\n",
+        "                      'encoder_grad_norm_clipped': log(encoder_grad_norm_clipped),\n",
+        "                      'planner_grad_norm_clipped': log(planner_grad_norm_clipped),\n",
         "                    },\n",
         "                    step=t)\n",
         "          \n",
         "\n",
-        "        prev_grad_norm = global_grad_norm.result()\n",
+        "        prev_grad_norm = log(global_grad_norm)\n",
         "          \n",
-        "        # reset metrics\n",
-        "        train_loss.reset_states()\n",
-        "        train_act_with_enc_loss.reset_states()\n",
-        "        train_act_with_plan_loss.reset_states()\n",
-        "        train_reg_loss.reset_states()\n",
-        "        valid_loss.reset_states()\n",
-        "        valid_act_with_enc_loss.reset_states()\n",
-        "        valid_act_with_plan_loss.reset_states()\n",
-        "        valid_reg_loss.reset_states()\n",
-        "\n",
-        "        valid_position_loss.reset_states()\n",
-        "        valid_max_position_loss.reset_states()\n",
-        "        valid_rotation_loss.reset_states()\n",
-        "        valid_max_rotation_loss.reset_states()\n",
-        "        valid_gripper_loss.reset_states()\n",
-        "\n",
-        "        actor_grad_norm.reset_states()\n",
-        "        encoder_grad_norm.reset_states()\n",
-        "        planner_grad_norm.reset_states()\n",
-        "\n",
-        "        actor_grad_norm_clipped.reset_states()\n",
-        "        encoder_grad_norm_clipped.reset_states()\n",
-        "        planner_grad_norm_clipped.reset_states()\n",
-        "\n",
-        "        global_grad_norm.reset_states()\n",
-        "\n",
-        "\n",
-        "\n",
         "    if t % save_inc == 0:\n",
         "        save_weights(model_path, actor, encoder, planner)\n",
         "        if not GCBC:\n",
@@ -2142,42 +2077,25 @@
         "\n",
         "    t += 1"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "   240/200000 [..............................]"
+            "   360/200000 [..............................] - ETA: 987:34:12 - Train Loss: 0.0099 - Validation Loss: 0.0132 - Time (s): 3.5722 "
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-40-59d2bb43d012>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;31m# validation plotting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mprogbar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalid_inc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Train Loss'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'Validation Loss'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'Time (s)'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mtrain_loss_result\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/utils/generic_utils.py\u001b[0m in \u001b[0;36madd\u001b[0;34m(self, n, values)\u001b[0m\n\u001b[1;32m    661\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    662\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 663\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_seen_so_far\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    664\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    665\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_estimate_step_duration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurrent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/utils/generic_utils.py\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, current, values, finalize)\u001b[0m\n\u001b[1;32m    623\u001b[0m         \u001b[0minfo\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m' - %s:'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    624\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 625\u001b[0;31m           \u001b[0mavg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    626\u001b[0m           \u001b[0;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1e-3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    627\u001b[0m             \u001b[0minfo\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m' %.4f'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mavg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mmean\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36mmean\u001b[0;34m(a, axis, dtype, out, keepdims)\u001b[0m\n\u001b[1;32m   3371\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3372\u001b[0m     return _methods._mean(a, axis=axis, dtype=dtype,\n\u001b[0;32m-> 3373\u001b[0;31m                           out=out, **kwargs)\n\u001b[0m\u001b[1;32m   3374\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3375\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/numpy/core/_methods.py\u001b[0m in \u001b[0;36m_mean\u001b[0;34m(a, axis, dtype, out, keepdims)\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_mean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 144\u001b[0;31m     \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0masanyarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    145\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m     \u001b[0mis_float16_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/numpy/core/_asarray.py\u001b[0m in \u001b[0;36masanyarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    134\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m     \"\"\"\n\u001b[0;32m--> 136\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    137\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r8pXuZiaPI1s",
-        "outputId": "c19fba6d-5bde-4fce-913b-fea896402cda",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r8pXuZiaPI1s",
+        "outputId": "c19fba6d-5bde-4fce-913b-fea896402cda"
       },
       "source": [
         "valid_loss_result"
