--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,11 +73,11 @@
     "config = {\n",
     "    'colab':False,\n",
     "    'gcs':False,\n",
-    "    'device':'CPU', # 'CPU', 'GPU', 'TPU'\n",
+    "    'device':'GPU', # 'CPU', 'GPU', 'TPU'\n",
     "    'train_datasets':[\"UR5\"],\n",
     "    'test_datasets':[\"UR5_slow_gripper_test\"],\n",
     "    # data\n",
-    "    'batch_size':512,\n",
+    "    'batch_size':32,\n",
     "    # model\n",
     "    'layer_size':256,\n",
     "    'latent_dim':256,\n",
@@ -85,7 +85,7 @@
     "    'num_distribs':None,\n",
     "    'qbits':None,\n",
     "    # training\n",
-    "    'learning_rate':1e-4,\n",
+    "    'learning_rate':3e-4,\n",
     "}"
    ]
   },
@@ -105,8 +105,8 @@
      "output_type": "stream",
      "text": [
       "Using local setup\n",
-      "Working path: /Users/Tristan/Documents/Robotic Learning/learning_from_play\n",
-      "Storage path: /Users/Tristan/Documents/Robotic Learning/learning_from_play\n"
+      "Working path: /home/sholto/Desktop/AI/learning_from_play\n",
+      "Storage path: /home/sholto/Desktop/AI/learning_from_play\n"
      ]
     }
    ],
@@ -168,8 +168,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensorflow version 2.4.1\n",
-      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n"
+      "Tensorflow version 2.3.1\n",
+      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU'), PhysicalDevice(name='/physical_device:XLA_CPU:0', device_type='XLA_CPU'), PhysicalDevice(name='/physical_device:XLA_GPU:0', device_type='XLA_GPU'), PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "<module 'lfp.train' from '/Users/Tristan/Documents/Robotic Learning/learning_from_play/lfp/train.py'>"
+       "<module 'lfp.train' from '/home/sholto/Desktop/AI/learning_from_play/lfp/train.py'>"
       ]
      },
      "execution_count": 5,
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "n2lBWIyOFdTv"
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -303,20 +303,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "UR5: 100%|██████████| 52/52 [00:01<00:00, 32.76it/s]\n"
+      "UR5: 100%|██████████| 52/52 [00:00<00:00, 70.35it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{   'acts': TensorSpec(shape=(512, 50, 7), dtype=tf.float32, name=None),\n",
-      "    'dataset_path': TensorSpec(shape=(512, None, 1), dtype=tf.int32, name=None),\n",
-      "    'goals': TensorSpec(shape=(512, 50, 11), dtype=tf.float32, name=None),\n",
-      "    'masks': TensorSpec(shape=(512, 50), dtype=tf.float32, name=None),\n",
-      "    'obs': TensorSpec(shape=(512, 50, 18), dtype=tf.float32, name=None),\n",
-      "    'seq_lens': TensorSpec(shape=(512,), dtype=tf.float32, name=None),\n",
-      "    'tstep_idxs': TensorSpec(shape=(512, None, 1), dtype=tf.int32, name=None)}\n"
+      "{   'acts': TensorSpec(shape=(32, 50, 7), dtype=tf.float32, name=None),\n",
+      "    'dataset_path': TensorSpec(shape=(32, None, 1), dtype=tf.int32, name=None),\n",
+      "    'goals': TensorSpec(shape=(32, 50, 11), dtype=tf.float32, name=None),\n",
+      "    'masks': TensorSpec(shape=(32, 50), dtype=tf.float32, name=None),\n",
+      "    'obs': TensorSpec(shape=(32, 50, 18), dtype=tf.float32, name=None),\n",
+      "    'seq_lens': TensorSpec(shape=(32,), dtype=tf.float32, name=None),\n",
+      "    'tstep_idxs': TensorSpec(shape=(32, None, 1), dtype=tf.int32, name=None)}\n"
      ]
     }
    ],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -336,10 +336,38 @@
     "id": "h8ZDAVpLFdTw",
     "outputId": "1c2b4f81-ea35-4f12-c365-3163f8704388"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UR5_slow_gripper_test: 100%|██████████| 2/2 [00:00<00:00, 53.82it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{   'acts': TensorSpec(shape=(32, 50, 7), dtype=tf.float32, name=None),\n",
+      "    'dataset_path': TensorSpec(shape=(32, None, 1), dtype=tf.int32, name=None),\n",
+      "    'goals': TensorSpec(shape=(32, 50, 11), dtype=tf.float32, name=None),\n",
+      "    'masks': TensorSpec(shape=(32, 50), dtype=tf.float32, name=None),\n",
+      "    'obs': TensorSpec(shape=(32, 50, 18), dtype=tf.float32, name=None),\n",
+      "    'seq_lens': TensorSpec(shape=(32,), dtype=tf.float32, name=None),\n",
+      "    'tstep_idxs': TensorSpec(shape=(32, None, 1), dtype=tf.int32, name=None)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Validation data\n",
-    "valid_data = dl.extract([TEST_DATA_PATH])\n",
+    "valid_data = dl.extract(TEST_DATA_PATHS)\n",
     "valid_dataset = dl.load(valid_data)"
    ]
   },
@@ -370,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,18 +525,15 @@
     "\n",
     "    optimizer = tf.optimizers.Adam(learning_rate=config['learning_rate'])\n",
     "    trainable_variables = actor.trainable_variables + encoder.trainable_variables + planner.trainable_variables\n",
-    "    checkpoint = tf.train.Checkpoint(encoder=encoder,\n",
-    "                                     planner=planner,\n",
-    "                                     actor=actor,\n",
-    "                                 optimizer=optimizer)\n",
+    "\n",
     "if config['device']=='CPU':\n",
     "    train_setup()\n",
     "else:\n",
     "    with strategy.scope():\n",
     "        train_setup()\n",
     "        \n",
-    "    train_dist_dataset = iter(strategy.experimental_distribute_dataset(train_dataset))\n",
-    "    valid_dist_dataset = iter(strategy.experimental_distribute_dataset(valid_dataset))"
+    "train_dist_dataset = iter(strategy.experimental_distribute_dataset(train_dataset))\n",
+    "valid_dist_dataset = iter(strategy.experimental_distribute_dataset(valid_dataset))"
    ]
   },
   {
@@ -1201,117 +1226,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "r8pXuZiaPI1s",
-    "outputId": "c19fba6d-5bde-4fce-913b-fea896402cda"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<tf.Tensor: shape=(), dtype=float32, numpy=0.018183153>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.014894525>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.012822507>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.012016779>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.011487661>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.011295487>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.01102834>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.010784242>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.010205653>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.010185119>,\n",
-       " <tf.Tensor: shape=(), dtype=float32, numpy=0.010216749>]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "valid_loss_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "id": "wnsg9ZwI8RNR"
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# model_name =\"NB0.00001\"\n",
-    "# model_path = f'/content/drive/My Drive/Robotic Learning/LMP_test/{model_name}/'\n",
-    "load_weights(model_path, actor, encoder, planner)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "id": "-Cs00c5NE6VW"
-   },
-   "outputs": [],
-   "source": [
-    "#@title Sample a batch for timeseries plotting\n",
-    "# Lets plot pred actions vs true actions\n",
-    "\n",
-    "batch = v_it.next()\n",
-    "states,acts,goals,seq_lens,masks = batch['obs'],batch['acts'],batch['goals'],batch['seq_lens'],batch['masks']\n",
-    "if GCBC:\n",
-    "  pred_acts = actor([states, goals])\n",
-    "else:\n",
-    "  encoding = encoder([states,acts])\n",
-    "  plan = planner([states[:, 0, :], goals[:, 0, :]]) \n",
-    "                                                  \n",
-    "  # check if encoder is overfitting on validation\n",
-    "  z_enc = z = tf.tile(tf.expand_dims(encoding.sample(), 1), (1, dataloader.window_size, 1))\n",
-    "  enc_act_distrib = actor([states, z_enc, goals])\n",
-    "\n",
-    "  # true validation performance, w/ planner\n",
-    "  z = tf.tile(tf.expand_dims(plan.sample(), 1), (1, dataloader.window_size, 1))\n",
-    "  pred_acts = actor([states, z, goals]) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "ERW0YID3FykT"
-   },
-   "outputs": [],
-   "source": [
-    "#@title Plot timeseries of state/action tracking over time - xyz q1234 gripper\n",
-    "import seaborn as sns\n",
-    "sns.set_style(\"darkgrid\")\n",
-    "\n",
-    "idx = 9\n",
-    "seq_len = int(seq_lens[idx])\n",
-    "x = np.arange(seq_len)\n",
-    "labels = ['x','y','z','q1','q2','q3','q4','gripper']\n",
-    "fig, axes = plt.subplots(dataloader.act_dim, 1, figsize=(10,12), squeeze=True)\n",
-    "for i in range(dataloader.act_dim):\n",
-    "    #sns.lineplot(x, acts[idx,:seq_len,i], color='r', ax=axes[i])\n",
-    "    axes[i].plot(acts[idx,:seq_len,i])\n",
-    "    axes[i].plot(pred_acts[idx, :seq_len,i])\n",
-    "    #sns.lineplot(x, pred_acts[idx, :seq_len,i], color='g', ax=axes[i])\n",
-    "    if not GCBC:\n",
-    "      sns.lineplot(x, enc_act_distrib[idx, :seq_len,i], color='b', ax=axes[i])\n",
-    "      axes[i].set_title(f'$\\\\bf{labels[i]}$')\n",
-    "    \n",
-    "fig.legend( ('true action', 'predicted action', 'encoder_action'))    \n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "2xQNWRGJQLZR"
@@ -1337,9 +1251,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "lfp_venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "lfp_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1351,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
