--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -1264,8 +1264,7 @@
       },
       "source": [
         "\n",
-        "\n",
-        "\n"
+        "from lfp.utils import save_weights, load_weights, load_optimizer_statE"
       ],
       "execution_count": 134,
       "outputs": []
@@ -1276,8 +1275,7 @@
         "id": "8nmzjO2d_Hfm"
       },
       "source": [
-        "RESUME = True\n",
-        "load_optimizer_state(optimizer, model_path, strategy)"
+        "RESUME = True"
       ],
       "execution_count": 135,
       "outputs": []
