Update argparse types

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -34,14 +34,14 @@
     "parser.add_argument('-s', '--data_source', default='LOCAL', help='Source of training data')\n",
     "parser.add_argument('-tfr', '--from_tfrecords', default=False, action='store_true', help='Enable if using tfrecords format')\n",
     "parser.add_argument('-d', '--device', default='CPU', help='Hardware device to train on')\n",
-    "parser.add_argument('-b', '--batch_size', default=32)\n",
-    "parser.add_argument('-l', '--layer_size', default=256, help='Layer size of models, increases size of neural net')\n",
-    "parser.add_argument('-z', '--latent_dim', default=32, help='Size of the VAE latent space')\n",
+    "parser.add_argument('-b', '--batch_size', default=32, type=int)\n",
+    "parser.add_argument('-l', '--layer_size', default=256, type=int, help='Layer size of models, increases size of neural net')\n",
+    "parser.add_argument('-z', '--latent_dim', default=32, type=int, help='Size of the VAE latent space')\n",
     "parser.add_argument('-g', '--gcbc', default=False, action='store_true', help='Enables GCBC, a simpler model with no encoder/planner')\n",
-    "parser.add_argument('-n', '--num_distribs', default=None, help='Number of distributions to use in logistic mixture model')\n",
-    "parser.add_argument('-q', '--qbits', default=None, help='Number of quantisation bits to discrete distributions into. Total quantisations = 2**qbits')\n",
-    "parser.add_argument('-lr', '--learning_rate', default=3e-4)\n",
-    "parser.add_argument('-t', '--train_steps', default=5000)\n",
+    "parser.add_argument('-n', '--num_distribs', default=None, type=int, help='Number of distributions to use in logistic mixture model')\n",
+    "parser.add_argument('-q', '--qbits', default=None, type=int, help='Number of quantisation bits to discrete distributions into. Total quantisations = 2**qbits')\n",
+    "parser.add_argument('-lr', '--learning_rate', type=float, default=3e-4)\n",
+    "parser.add_argument('-t', '--train_steps', type=int, default=5000)\n",
     "parser.add_argument('-r', '--resume', default=False, action='store_true')\n",
     "\n",
     "\n",
